# auth-service

auth-service/: docker-compose.yml  go.mod  go.sum
auth-service/cmd/: grpc_server.go  main.go
auth-service/cmd/grpc/: server.go
auth-service/internal/api/: auth_handler.go
auth-service/internal/infra/: db.go
auth-service/internal/oauth/: google.go
auth-service/proto/: auth.pb.go  auth.proto  auth_grpc.pb.go
lab8.3/: CMakeLists.txt  image_hasher.cpp  image_hasher.h  main.cpp
